--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,4 @@
+
 html,
 body {
   padding: 0;
@@ -6,11 +7,7 @@ body {
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-* {
-  box-sizing: border-box;
-}
